<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ROS Assistant</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="distance_str">%.2f meters</string>

    <!-- Preference Titles -->
    <string name="topics_title">Topics</string>
    <string name="namespace_title">Namespace</string>
    <string name="locations_title">Locations</string>

    <!-- Preferences Messages -->
    <string name="topic_pref">Topic name</string>
    <string name="namespace_pref">Namespace of the topics</string>
    <string name="locations_pref">Edit locations</string>

    <!-- Preferences keys -->
    <string name="topic_key">topic</string>
    <string name="namespace_key">namespace</string>
    <string name="locations_key">locations</string>
    <string name="app_key_set">application_keys</string>
    <string name="locations_name_suffix_key">%s_name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
