<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/topics_title"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="@string/topic_key"
            app:title="@string/topic_pref"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/namespace_title"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="@string/namespace_key"
            app:title="@string/namespace_pref"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/locations_title"
        app:iconSpaceReserved="false">

        <Preference
            app:key="@string/locations_key"
            app:title="@string/locations_pref"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>
